Import of DIOCLES/Net-NationalRail-LiveDepartureBoards-0.02 from CPAN.
gitpan-cpan-distribution: Net-NationalRail-LiveDepartureBoards
gitpan-cpan-version:      0.02
gitpan-cpan-path:         DIOCLES/Net-NationalRail-LiveDepartureBoards-0.02.tar.gz
gitpan-cpan-author:       DIOCLES
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -37,7 +37,7 @@ You can also look for information at:
 
 COPYRIGHT AND LICENCE
 
-Copyright (C) 2009 Tim Retout
+Copyright (C) 2009, 2010 Tim Retout
 
 This program is free software; you can redistribute it and/or modify it
 under the same terms as Perl itself.
